Fix map-canvas on firefox

--- a/app/assets/stylesheets/neighborly/resources/projects/_show.sass
+++ b/app/assets/stylesheets/neighborly/resources/projects/_show.sass
@@ -171,6 +171,7 @@
               float: left
         .address-input
           li.input
+            float: none
             border-bottom: none !important
             margin-bottom: 0
             padding-bottom: 0
