--- a/app/assets/stylesheets/neighborly/resources/users/_show.sass
+++ b/app/assets/stylesheets/neighborly/resources/users/_show.sass
@@ -106,6 +106,8 @@
               width: 500px
           &#user_address_number_input, &#user_address_neighbourhood_input, &#user_address_city_input
             margin-right: 10px
+          &#user_address_input
+            float: none
           #user_address
             width: 500px
         .map-canvas
